--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,15 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout Code - SLV Beta
         uses: actions/checkout@v4
+      - name: Checkout Code - SLV
+        uses: actions/checkout@v4
+        with:
+          repository: shibme/slv
+          ref: main
+          path: slv
+          ssh-key: ${{ secrets.SLV_REPO_READ_SSH_KEY }}
       - name: Set up Go
         uses: actions/setup-go@v4
       - name: Run GoReleaser
